# fubon-cli

./: .editorconfig  .flake8  .gitignore  .gitignore_extra  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CI_CD_STATUS.md  CLAUDE.md  CONTRIBUTING.md  Fubon.md  LICENSE  MANIFEST.in  README.md  RELEASE_GUIDE.md  SETUP_COMPLETE.md  SKILL.md  TESTING.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
fubon_cli/: __init__.py  core.py  main.py
fubon_cli/commands/: __init__.py  account.py  ai.py  auth.py  condition.py  futopt.py  market.py  realtime.py  stock.py
scripts/: README.md  build_skill_bundle.py  publish_skill.py  quick_check.ps1  release.ps1  test_real_data.ps1  test_real_data.py  update_version.ps1  validate_data_quality.py  validate_skill_doc.py  version_config.json
tests/: __init__.py  conftest.py  test_ai_commands.py  test_auth.py  test_auth_and_commands_mocked.py  test_cli.py  test_core.py  test_core_full.py  test_error_paths.py  test_remaining_coverage.py
wheels/: fubon_neo-2.2.8-cp37-abi3-macosx_10_12_x86_64.whl
